objects/ffct__MergeProfileJob__c.object
<CustomObject>
    <fields>
        <fullName>ffct__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffct__BatchProcessStatus__c</fullName>
        <formula>TEXT(ffct__BatchProcess__r.ffct__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>ffct__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Merge Profile Jobs</relationshipLabel>
        <relationshipName>MergeProfileJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Merge Profile Job</label>
    <nameField>
        <displayFormat>MPJ-{000000}</displayFormat>
        <label>Merge Profile Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Profile Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>